tests/ui/feature-gates/feature-gate-ffi_const.rs
#![crate_type = "lib"]

extern "C" {
    #[ffi_const] //~ ERROR the `#[ffi_const]` attribute is an experimental feature
    pub fn foo();
}
